tests/type-check/bad/str-dict2.arr
import str-dict as S

s = [S.string-dict: {"a";5}, {"b";true}]

